# tree-sitter-wpl

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  release.yml
bindings/c/: tree-sitter-wpl.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_wpl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWpl/: wpl.h
completions/: completion.bundle.json
editor/: asset-manifest.json
editor/wasm/: README.md  tree-sitter-wpl.wasm
queries/: highlights.scm
scripts/: build-wasm.mjs  validate.sh
src/: grammar.json  node-types.json  parser.c  scanner.c
src/format/: formatter.rs  mod.rs  tree.rs
